# src/routes/user.routes.ts
@@ -11,7 +11,9 @@ import blacklistToken, {
   getAllUsers,
   sendResetInstructions,
   resetUserPassword,
-  updateUserPassword
+  updateUserPassword,
+  changeAccountStatus,
+  getSingleUser
 } from "../controllers/user.controllers";
 import { authenticate } from "../middlewares/user.auth";
 
@@ -22,21 +24,24 @@ import {
   isAdmin,
   isValidUserLogin,
   isValidPasswordUpdated,
-  isUserEmailValid
+  isUserEmailValid,
+  checkIfUserBlocked
 } from "../middlewares/user.middleware";
 import { verifyOtp } from "../controllers/otpauth.controllers";
 import { isRoleIdExist } from "../middlewares/role.middleware";
 import { isDecodeOTP } from "../middlewares/otpauth.middleware";
+import { accountStatusValidation } from "../validations/user.validations";
 
 const userRoutes = express.Router({ mergeParams: true });
 
 userRoutes.post("/reset-password", sendResetInstructions);
 userRoutes.patch("/reset-password/:token", resetUserPassword);
 userRoutes.post("/signup", isValidUser, isUserExist, userSignup);
-userRoutes.post("/login", isValidUserLogin, userLogin);
+userRoutes.post("/login", isValidUserLogin, checkIfUserBlocked, userLogin);
 userRoutes.post("/logout", authenticate, blacklistToken);
 userRoutes.get("/profile", authenticate, userProfile);
 userRoutes.get("/", authenticate, isAdmin, getAllUsers);
+
 userRoutes.put(
   "/profiles",
   authenticate,
@@ -61,6 +66,16 @@ userRoutes.patch(
   isUserEmailValid,
   isValidPasswordUpdated,
   updateUserPassword
+);
+
+userRoutes.get("/:userId", authenticate, isAdmin, getSingleUser);
+
+userRoutes.patch(
+  "/:userId/status",
+  authenticate,
+  isAdmin,
+  accountStatusValidation,
+  changeAccountStatus
 );
 
 export default userRoutes;
